@@ -1,3 +1,8 @@
+2009-06-04  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-list.cc:
+	Fixed problem #584727 (wrong positioning of file popup menu)
+
 2009-06-01  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-xml-config.cc:
